// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VivButton /> renders a basic button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 7,
        "flexDirection": "row",
        "paddingHorizontal": 25,
      },
      Object {
        "backgroundColor": "#ffffff",
        "paddingLeft": 12.5,
        "paddingRight": 12.5,
        "paddingVertical": 13.5,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#869DB2",
        },
        Object {
          "fontFamily": "Nunito_600SemiBold",
          "fontSize": 17,
        },
        Object {
          "color": "#191940",
        },
        Object {
          "marginLeft": 0,
          "marginRight": 8,
        },
      ]
    }
  >
    Hello World
  </Text>
</View>
`;

exports[`<VivButton /> renders a basic button correctly with all props 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 7,
        "flexDirection": "row",
        "paddingHorizontal": 25,
      },
      Object {
        "backgroundColor": "#3DD7F2",
        "paddingLeft": 12,
        "paddingRight": 12,
        "paddingVertical": 14,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 22,
        },
        undefined,
        Object {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#869DB2",
        },
        Object {
          "fontFamily": "Nunito_600SemiBold",
          "fontSize": 17,
        },
        Object {
          "color": "#191940",
        },
        Object {
          "marginLeft": 8,
          "marginRight": 0,
        },
      ]
    }
  >
    Hello World props
  </Text>
</View>
`;

exports[`<VivButton /> renders a separated button correctly with all props 1`] = `
<View
  accessible={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 7,
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "#D98436",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderColor": "#869DB2",
          "borderRightWidth": 0.3,
          "paddingHorizontal": 18,
        },
        Object {
          "paddingVertical": 11,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 22,
          },
          undefined,
          Object {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#869DB2",
        },
        Object {
          "fontFamily": "Nunito_600SemiBold",
          "fontSize": 17,
        },
        Object {
          "color": "#191940",
        },
        Array [
          Object {
            "paddingLeft": 10,
            "paddingRight": 25,
            "paddingVertical": 13.5,
          },
          Object {
            "paddingLeft": 15,
            "paddingRight": 15,
            "paddingVertical": 11,
          },
        ],
      ]
    }
  >
    Hello World props
  </Text>
</View>
`;
